--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,8 @@ color: rgba(255,255,255,1);
 
 .leftBar > img {
   padding: 15px;
-height : 15vh;
-width: 7vw;
+height : 100px;
+width: 100px;
 
 
 }
