--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,14 @@ width: 100px;
   border: 1px solid rgba(255,255,255,0.7);
 }
 
-.mainpage{
+.rightmini{
+  background: #2a3133;
+  border: 1px solid rgba(255,255,255,0.2);
+  border-radius: 5px;
+  width: 30%;
+  height: auto;
+
+
 }
 
 .rightBar{
